corrected additional spacing problem with footer

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -34,7 +34,7 @@ img {
 }
 
 .fix-footer {
-  margin-top: 320px;
+  margin-top: 450px;
 }
 
 .ConductTransaction {
